# knoda5

./: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  NEWS  README  config.h.cmake  configure
admin/: CMakeLists.txt  datadirs.sh.cmake  extract-messages.sh.cmake  porting-hints.txt  status.sh
hk_kdeclasses/: CMakeLists.txt  hk_kde4simplegrid.cpp  hk_kde4simplegrid.h  hk_kde4simplegrid_p.cpp  hk_kde4simplegrid_p.h  hk_kdeaddtabledialog.cpp  hk_kdeaddtabledialog.h  hk_kdeaddtabledialogbase.cpp  hk_kdeaddtabledialogbase.h  hk_kdeboolean.cpp  hk_kdeboolean.h  hk_kdebutton.cpp  hk_kdebutton.h  hk_kdeclasses.desktop  hk_kdecolumn.cpp  hk_kdecolumn.h  hk_kdecombobox.cpp  hk_kdecombobox.h  hk_kdecomboboxtextlist.cpp  hk_kdecomboboxtextlist.h  hk_kdecomboboxtextlistbase.cpp  hk_kdecomboboxtextlistbase.h  hk_kdecsvexportdialog.cpp  hk_kdecsvexportdialog.h  hk_kdecsvexportdialogbase.cpp  hk_kdecsvexportdialogbase.h  hk_kdecsvimportdialog.cpp  hk_kdecsvimportdialog.h  hk_kdecsvimportdialogbase.cpp  hk_kdecsvimportdialogbase.h  hk_kdedatabasesetting.cpp  hk_kdedatabasesetting.h  hk_kdedatabasesettingbase.cpp  hk_kdedatabasesettingbase.h  hk_kdedatasource.cpp  hk_kdedatasource.h  hk_kdedate.cpp  hk_kdedate.h  hk_kdedbdesigner.cpp  hk_kdedbdesigner.h  (+147 more)
hk_kdeclasses/pics/: CMakeLists.txt
hk_kdedbdesigner/: CMakeLists.txt  hk_kde4dbdesignerpart.desktop  hk_kde5dbdesignerpart.desktop  hk_kdedbdesignerpart.cpp  hk_kdedbdesignerpart.h  hk_kdedbdesignerpart.rc
hk_kdeformpart/: CMakeLists.txt  hk_kde4formpart.desktop  hk_kde5formpart.desktop  hk_kdeformpart.cpp  hk_kdeformpart.h  hk_kdeformpartdesign.rc  hk_kdeformpartview.rc
hk_kdegridpart/: CMakeLists.txt  hk_kde4gridpart.desktop  hk_kde5gridpart.desktop  hk_kdegridpart.cpp  hk_kdegridpart.h  hk_kdegridpart.rc
hk_kdemodulepart/: CMakeLists.txt  hk_kde4modulepart.desktop  hk_kde5modulepart.desktop  hk_kdemodulepart.cpp  hk_kdemodulepart.h  hk_kdemodulepart.rc
hk_kdeqbepart/: CMakeLists.txt  hk_kde4qbepart.desktop  hk_kde5qbepart.desktop  hk_kdeqbepart.cpp  hk_kdeqbepart.h  hk_kdeqbepart.rc
hk_kdequerypart/: CMakeLists.txt  hk_kde5querypart.desktop  hk_kdequerypart.cpp  hk_kdequerypart.h  hk_kdequerypart.rc  hk_kdequerypartqbe.rc  hk_kdequerypartsql.rc
hk_kdereportpart/: CMakeLists.txt  hk_kde5reportpart.desktop  hk_kdereportpart.cpp  hk_kdereportpart.h  hk_kdereportpart.rc  hk_kdereportpartview.rc
hk_kdetablepart/: CMakeLists.txt  hk_kde4tablepart.desktop  hk_kde5tablepart.desktop  hk_kdetablepart.cpp  hk_kdetablepart.h  hk_kdetablepart.rc
knoda/: CMakeLists.txt  hk_kdedriverselect.cpp  hk_kdedriverselect.h  hk_kdedriverselectbase.cpp  hk_kdedriverselectbase.h  knoda4-mime.xml  knoda4.desktop  knoda5.desktop  knodaiface.kidl  main-rt.cpp  main.cpp  x-hk_classes-sqlite2.desktop  x-hk_classes-sqlite3.desktop  x-hk_connection.desktop  x-paradox.desktop  x-xbase.desktop
knoda/doc/: CMakeLists.txt
knoda/doc/en/: CMakeLists.txt  index.docbook  installation.docbook  knodascriptingtutorial.docbook  pythonreference.docbook  tutorial.docbook
knoda/pics/: CMakeLists.txt
knoda/po/: CMakeLists.txt  bg.gmo  bg.po  de.gmo  de.po  es.gmo  es.po  fr.gmo  fr.po  hu.gmo  hu.po  it.gmo  it.po  knoda4.pot  knoda5.pot  ru.gmo  ru.po  uk.gmo  uk.po
