

########### install files ###############

install(FILES filter.png find.png filterexec.png pfeil.png upload.png
  	    boolean22x22.png combobox22x22.png rowselector22x22.png label.png
 	    editline.png grid22x22.png button.png multiline.png reportsection.png gridcursor.png
 	    propertyeditor.png  dbdesigner.png gridadd22x22.png mimage.png delete.png add.png
  	    first.png last.png previous.png next.png store.png key.png datebutton.png
 DESTINATION ${KDE_INSTALL_DATADIR}/${LIB_MODULE_NAME}/pics)

